--- a/index.html
+++ b/index.html
@@ -7,28 +7,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/app.js" defer></script>
     <title>Goblin Story</title>
 </head>
 
 <body>
     <div class="container">
-        <div id="topBar">
-            <div id="healthBar"></div>
-            <div id="magicBar"></div>
-            <div id="goldBar"></div>
+        <div class="row">
+            <div class="col">Goblin Story</div>
         </div>
-        <div id="screen">
-            <div id="textScreen"></div>
-            <div id="artScreen"></div>
+        <div class="row" id="topBar">
+            <div class="col-3" class="statusBars" id="healthBar">healthbar</div>
+            <div class="col-3" class="statusBars" id="magicBar">magicbar</div>
+            <div class="col-3" class="statusBars" id="goldBar">goldbar</div>
         </div>
-        <div id="menu">
-            <div id="characterSheet"></div>
-            <div id="attacks"></div>
-            <div id="potions"></div>
+        <div class="row" id="screen">
+            <div class="col-6" id="textScreen"></div>
+            <div class="col-6" id="artScreen"></div>
+        </div>
+        <div class="row" id="menu">
+            <div class="col-4" id="characterSheet">
+                <p id="characterName"></p>
+                <ul id="statsList">
+                    <li class="stats" id="armor">Armor: </li>
+                    <li class="stats" id="attack">Attack: </li>
+                </ul>
+            </div>
+            <div class="col-4" id="attacks">
+                <button class="actions" id="swordButton">Sword</button>
+                <button class="actions" id="fireballButton">Fireball</button>
+            </div>
+            <div class="col-4" id="pack">
+                <button class="actions" id="healthPotion">Potion of Healing</button>
+                <button class="actions" id="magicPotion">Potion of Magic</button>
+            </div>
         </div>
 
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
