Add turn counter to track player and enemy turns

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col">Goblin Story</div>
+        <div class="row justify-content-center">
+            <div class="col-4 p-1">Goblin Story</div>
         </div>
         <div class="row" id="topBar">
-            <div class="col-3" class="statusBars" id="healthBar">healthbar</div>
-            <div class="col-3" class="statusBars" id="magicBar">magicbar</div>
-            <div class="col-3" class="statusBars" id="goldBar">goldbar</div>
+            <div class="col-3 m-2 p-1 border" class="statusBars" id="healthBar">healthbar</div>
+            <div class="col-3 m-2 offset-1 p-1 border" class="statusBars" id="magicBar">magicbar</div>
+            <div class="col-3 m-2 offset-2 p-1 border" class="statusBars" id="goldBar">goldbar</div>
         </div>
         <div class="row" id="screen">
             <div class="col-6" id="textScreen"></div>
@@ -35,12 +35,12 @@
                 </ul>
             </div>
             <div class="col-4" id="attacks">
-                <button class="actions" id="swordButton">Sword</button>
-                <button class="actions" id="fireballButton">Fireball</button>
+                <button class="actions m-2" id="swordButton">Sword</button>
+                <button class="actionsm-2" id="fireballButton">Fireball</button>
             </div>
             <div class="col-4" id="pack">
-                <button class="actions" id="healthPotion">Potion of Healing</button>
-                <button class="actions" id="magicPotion">Potion of Magic</button>
+                <button class="actions m-2" id="healthPotion">Potion of Healing</button>
+                <button class="actions m-2" id="magicPotion">Potion of Magic</button>
             </div>
         </div>
 
