Adds player interaction with town. Can buy potions and upgrades

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <div class="row" id="screen">
             <div class="col-6" id="textScreen">
                 <div id="townScreen">
-                    <button id="stayAtInn">Stay at Inn: 5 Gold</button>
-                    <ul>
+
+                    <ul id="townLocations">
                         <li id="blacksmith">Blacksmith</li>
                         <li id="shaman">Shaman's Hut</li>
-                        <li id="Merchant">Merchant</li>
+                        <li id="merchant">Merchant</li>
+                        <li id="stayAtInn">Stay at Inn: 5 Gold</li>
                     </ul>
                 </div>
                 <div id="blacksmithScreen">
@@ -53,6 +54,7 @@
                         <li id="goBackMerchant">Go back</li>
                     </ul>
                 </div>
+
                 <div id="combatScreen">
                     <h2 id="battleHeader"></h2>
                     <p id="playerActionText"></p>
