--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
                     <input type="submit">
                 </form>
                 <p>Enter your name and submit to start your journey</p>
+                <img class="profile" src="img/goblin.PNG">
             </div>
 
         </div>
         <div id="introScreen">
             <p id="text">
-                You are a goblin on a mission: to save your family. They have been turned to stone by a basilisk's gaze,
+                You are a goblin on a mission: to save your family. They have been turned to stone by a basilisk's
+                gaze,
                 and you are their only hope (you were out picking Deep Mushrooms when the Basilisk attacked).
                 There are only two ways you know of to undo their petrification: a cleric's Greater Restoration,
-                or by killing the supreme ruler of the Underdark, the Lich king, and stealing their staff, the Staff of
+                or by killing the supreme ruler of the Underdark, the Lich king, and stealing their staff, the Staff
+                of
                 Greater
                 Restoration. Since you dont know any clerics, you decide to...
             </p>
@@ -65,7 +68,7 @@
                     </div>
                     <div id="shamanScreen">
                         <ul>
-                            <li id="upgradeFireball">Upgrade Fireball : 40 Gold</li>
+                            <li id="upgradeFireball">Upgrade Fireball : 30 Gold</li>
                             <li id="goBackShaman">Go back</li>
                         </ul>
                     </div>
@@ -92,7 +95,9 @@
 
 
                 </div>
-                <div class="col-6" id="artScreen"></div>
+                <div class="col-6" id="artScreen">
+                    <!-- <img class="enemyArt" src="img/scamp.PNG"> -->
+                </div>
             </div>
             <div class="row" id="menu">
                 <div class="col-4" id="characterSheet">
