--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-4 p-1">
+            <div class="col-4 p-1" id="title">
                 <h1>Goblin Story</h1>
             </div>
             <div id="startScreen">
